--- a/src/foot5x5/MainBundle/Resources/views/layout.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/layout.html.twig
@@ -23,7 +23,7 @@
     <script src="{{ asset('lib/bootstrap/js/bootstrap-table.js') }}"></script>
     <script src="{{ asset('lib/bootstrap/js/bootstrap-table-fr-FR.js') }}"></script>
     <!-- CKEditor -->
-    <script src="{{ asset('ckeditor/ckeditor.js') }}"></script>
+    <!--script src="{{ asset('ckeditor/ckeditor.js') }}"></script-->
 </head>
 
 <body>
@@ -45,6 +45,7 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="{{ path('foot5x5_main_homepage') }}"><span>{{app.session.get('community_name')}}</span><span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="{{ path('foot5x5_main_homepage') }}">Home</a></li>
+                        <li><a href="{{ path('community_info') }}">Infos communauté</a></li>
                         <li><a href="{{ path('welcome') }}">Changer communauté</a></li>
                     </ul>
                 </li>
