--- a/web/css/foot5x5.css
+++ b/web/css/foot5x5.css
@@ -18,15 +18,25 @@ html, body {
 }
 
 body {
+	/*
     background: linear-gradient(to right, rgb(250,250,250) 0%, (234,234,250) 100%);
 	background: -moz-linear-gradient(right, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
     background: -o-linear-gradient(right, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
-    background: -webkit-linear-gradient(left, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
-    /* padding-top: 60px; */
+	background: -webkit-linear-gradient(left, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
+	*/
+	background: #FFFFFF;
+	background: url(../img/bg_penalty-kick_fade.jpg) no-repeat center center fixed;
+	background-size: cover;
+	/* padding-top: 60px; */
 }
 #content {
 	min-height: 800px;
 	margin-top: 50px;
+	background-color: #FFFFFFAA;
+	padding: 0 20px 0 20px;
+	border-left: 3px solid #4F5261;
+	border-right: 3px solid #4F5261;
+	box-shadow: -0.2em 0 1em #4F5261, 0.2em 0 1em #4F5261;
 }
 a:hover, a:link, a:visited, a:active {
 	text-decoration: none;
@@ -211,10 +221,6 @@ li.dropdown.open ul.dropdown-menu li a {
 
 .navbar-right .dropdown-menu {
 	text-align: right
-}
-
-div#content {
-	padding: 0;
 }
 
 /* ------------------------- */
@@ -1213,6 +1219,13 @@ tr#finances-totalCredits td {
 #notes-container .table-responsive {
 	margin-bottom: 10px;
 }
+#notes-container .table-responsive {
+	/* background-color: #eaeafa; */
+    background: linear-gradient(to bottom, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
+	background: -moz-linear-gradient(top, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
+    background: -o-linear-gradient(top, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
+	background: -webkit-linear-gradient(top, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
+}
 #notes-container .table-responsive .notes-playerRow:hover {
 	background: -moz-linear-gradient(top,  rgb(224,240,255) 0%, rgb(204,218,250) 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(224,240,255)), color-stop(100%,rgb(204,218,250)));
@@ -1385,6 +1398,34 @@ tr#finances-totalCredits td {
 /* ------------------------- */
 /*   ADMINISTRATION          */
 /* ------------------------- */
+.tab-content {
+	padding: 0;
+}
+.nav-tabs {
+	border-bottom: 2px solid #191950!important;
+	margin-bottom: 10px;
+}
+.nav-tabs li a {
+	border-radius: 10px 10px 0 0!important;
+	color: #191950;
+	font-weight: 700;
+	border-bottom: 0!important;
+}
+.nav-tabs li a:hover {
+	background-color: transparent;
+	border-color: transparent;
+	color: #2447B2;
+}
+.nav-tabs li.active a,
+.nav-tabs li.active a:hover,
+.nav-tabs li.active a:focus {
+	background-color: #191950;
+	color: #E0F0FF;
+	border-top: 2px solid #191950!important;
+	border-left: 2px solid #191950!important;
+	border-right: 2px solid #191950!important;
+	box-shadow: 0.1em 0 0.5em #191950;
+}
 .admin-panel {
     margin-top: 5px;
     margin-bottom: 5px;
@@ -1416,14 +1457,42 @@ tr#finances-totalCredits td {
 	overflow: visible;
 }
 */
+/*
 .admin-table > table > tbody > tr:nth-child(odd) > td {
    background-color: #E0F0FF;
 }
 .admin-table > table > tbody > tr:nth-child(even) > td {
    background-color: #F3F8FF;
 }
+*/
+.admin-table > table {
+	border: 1px solid #191950;
+    background: linear-gradient(to bottom, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
+	background: -moz-linear-gradient(top, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
+    background: -o-linear-gradient(top, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
+	background: -webkit-linear-gradient(top, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
+}
+.admin-table > table > thead > tr > th {
+	border-bottom: 1px solid #191950;
+}
+.admin-table > table > tbody > tr {
+	/* background-color: #FFFFFF;
+	border: 1px solid #191950; */
+	border-top: 1px solid #ccc;
+	border-left: 1px solid #191950;
+	border-right: 1px solid #191950;
+}
+.admin-table > table > tbody > tr > td {
+	border-top: 0;
+	vertical-align: middle;
+}
 .admin-table > table > tbody > tr:hover > td {
-   background-color: #FFFFFF;
+	background: -moz-linear-gradient(top,  rgb(224,240,255) 0%, rgb(204,218,250) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(224,240,255)), color-stop(100%,rgb(204,218,250)));
+    background: -webkit-linear-gradient(top,  rgb(224,240,255) 0%,rgb(204,218,250) 100%);
+    background: -o-linear-gradient(top,  rgb(224,240,255) 0%,rgb(204,218,250) 100%);
+    background: -ms-linear-gradient(top,  rgb(224,240,255) 0%,rgb(204,218,250) 100%);
+    background: linear-gradient(to bottom, rgb(224,240,255) 0%,rgb(204,218,250) 100%);
 }
 .admin-left-column {
 	text-align: left;
@@ -1452,6 +1521,12 @@ tr#finances-totalCredits td {
 }
 #admin-results-form div.form-group {
     margin: 0;
+}
+
+#admin-players-form {
+	margin-bottom: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 /* ------------------------- */
