[ENH] Handle filter & sort of Notes table + Design

--- a/src/foot5x5/MainBundle/Resources/views/notes.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/notes.html.twig
@@ -23,7 +23,7 @@
         <label for="notes-form-activePlayers">Joueurs actifs uniquement</label>
     </div>
     <div class="table-responsive">
-        <table data-toggle="table" class="table table-hover table-condensed" data-sort-name="name" data-sort-order="asc">
+        <table id="notes-table" data-toggle="table" class="table table-hover table-condensed" data-sort-name="name" data-sort-order="asc">
             <thead class="dark-blue-grad">
                 <tr>
                     <th data-field="name" data-sortable="true" class="col-md-2">Joueur</th>
