--- a/web/css/foot5x5.css
+++ b/web/css/foot5x5.css
@@ -1214,17 +1214,35 @@ tr#finances-totalCredits td {
 	padding: 0;
 }
 #notes-form {
+	padding-top: 10px;
+	padding-bottom: 10px;
 	margin-bottom: 5px;
 }
 #notes-container .table-responsive {
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 }
-#notes-container .table-responsive {
-	/* background-color: #eaeafa; */
+#notes-container .table-responsive table {
+	border: 1px solid #191950!important;
     background: linear-gradient(to bottom, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
 	background: -moz-linear-gradient(top, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
     background: -o-linear-gradient(top, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
 	background: -webkit-linear-gradient(top, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
+}
+#notes-container .table-responsive table > thead > tr > th {
+	border-bottom: 1px solid #191950;
+	border-left: 0;
+}
+#notes-container .table-responsive table > tbody > tr {
+	/* background-color: #FFFFFF;
+	border: 1px solid #191950; */
+	border-top: 1px solid #ccc;
+	border-left: 1px solid #191950;
+	border-right: 1px solid #191950;
+}
+#notes-container .table-responsive table > tbody > tr > td {
+	border-top: 0;
+	border-left: 0;
+	vertical-align: middle;
 }
 #notes-container .table-responsive .notes-playerRow:hover {
 	background: -moz-linear-gradient(top,  rgb(224,240,255) 0%, rgb(204,218,250) 100%);
