--- a/src/foot5x5/UserBundle/Resources/views/welcome.html.twig
+++ b/src/foot5x5/UserBundle/Resources/views/welcome.html.twig
@@ -8,7 +8,12 @@
 		<img src="{{ asset('logoFoot5x5_001d.png') }}" alt="Foot5x5_logo" class="img-responsive"/>
 		<h3>Créé ta communauté foot5x5 ou rejoins en une déjà existante!</h3>
         <div class="landing-buttons col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-            <a href="#" class="btn btn-success" data-popup-open="popup-create-community"><span class="glyphicon glyphicon-plus"></span>Créer une communauté</a>
+            {% if isCommunityCreationAllowed %}
+            <a href="{{ path('create_community') }}" class="btn btn-success">
+            {% else %}
+            <a href="#" class="btn btn-success" data-popup-open="popup-create-community">
+            {% endif %}
+            <span class="glyphicon glyphicon-plus"></span>Créer une communauté</a>
             <a href="{{ path('join_community') }}" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span>Rejoindre une communauté</a>
         </div>
         {% if communities is not empty %}
